# web-ssh-tool

./: .gitignore  LICENSE  README.md  build-license.ts  build-liscense.ts  build-rust-assets.ts  build.ts  bun.lockb  deploy.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.VSCodeCounter/2023-08-03_13-45-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: main.yml
node/: .gitignore  config.json  index.ts  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
node/src/: common.ts  download.ts  rest.ts  terminal.ts  upload.ts  watch.ts
node/src/common/: configuration.ts  context.ts  help.ts  tools.ts
node/src/common/context/: logger.ts  token.ts
rust/: Cargo.toml
rust/src/: components.rs  connection_peer.rs  main.rs
rust/src/common/: app_config.rs  authenticate_queue.rs  connection_peer.rs  mod.rs  websocket_peer.rs
rust/src/http_server/: client.rs  components.rs  download.rs  mod.rs  not_found.rs  preview.rs  upload.rs
rust/src/http_server/file_send/: .gitignore  external_file_send.rs  internal_file_send.rs  mod.rs
rust/src/tls/: cert_verifier.rs  mod.rs  readme.md
rust/src/websocket_client/: components.rs  download.rs  fs_api.rs  mod.rs  preview.rs  unzip.rs  upload.rs  watch.rs
rust/src/websocket_server/: mod.rs  on_authenticate.rs  on_client.rs  on_request_authenticate.rs  shell.rs
web/: .eslintrc.cjs  bun.lockb  config-overrides.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.tsx  index.css  index.tsx  setupProxy.js
web/src/common/: Delay.ts  DomTools.ts  IntervalLimiter.ts  Providers.tsx  Tools.ts  Type.ts
web/src/common/providers/: HistoryContext.tsx  LocaleContext.tsx  ServerContext.tsx  SettingsContent.tsx  StorageContext.tsx  ThemeContext.tsx
web/src/components/: AdaptedWindow.module.css  AdaptedWindow.tsx  AnimatedList.module.css  AnimatedList.tsx  AsyncButton.tsx  Dialog.tsx  EventListenerBuilder.tsx  FadeCrossTransition.tsx  InputAutoFocusRef.tsx  Layout.css  LayoutBuilder.tsx  LongPressButton.tsx  Scaffold.tsx  Transitions.tsx  WebSocketProvider.tsx  XTerminal.tsx
web/src/pages/: HomePage.tsx  SignInPage.tsx
web/src/pages/home-page/: FileExplorer.tsx  FileExplorer.worker.js  FileExplorer.worker.ts  MultiFileExplorer.tsx  MultiTerminalView.tsx  Scaffold.tsx  tsconfig.json
web/src/pages/home-page/file-explorer/: Common.tsx  DirectoryPreview.tsx  ErrorPreview.tsx  FileListTile.tsx  FilePreview.tsx  Loading.tsx  LostConnection.tsx
web/src/pages/home-page/file-explorer/common/: FileIcon.ts  GoToDialog.tsx  NavigatorBar.tsx  UuidV4.ts
web/src/pages/home-page/file-explorer/directory-preview/: CopyToDialog.tsx  DeleteDialog.tsx  DropZone.tsx  FileListTile.tsx  FileMoveDialog.tsx  GoToDialog.tsx  InformationDialog.tsx  MoveDialog.tsx  MoveToDialog.tsx  NewDialog.tsx  PreviewDialog.tsx  RenameDialog.tsx  RequestPreviewDialog.tsx  TextFieldConfirmDialog.tsx  ToolsBar.tsx
web/src/pages/workers/: Compress.ts  Compress.worker.ts  CompressCommon.ts  tsconfig.json
web/src/workers/: Compress.ts  Compress.worker.ts  CompressCommon.ts  tsconfig.json
